# urdf_info

./: Baxter Poses (50).csv  frames.gv  joints  joints.txt  joints.txt~
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
devel/lib/agitr/: hello
devel/lib/pkgconfig/: agitr.pc  urdf_extractor.pc  urdf_info.pc
devel/lib/urdf_info/: categorize  full_info  getTransform  hello_world  import_tree  pointcloud  random_poses
devel/share/agitr/cmake/: agitrConfig.cmake
devel/share/urdf_extractor/cmake/: urdf_extractorConfig.cmake
devel/share/urdf_info/cmake/: urdf_infoConfig.cmake
install/: setup.sh
install/lib/pkgconfig/: agitr.pc  urdf_info.pc
install/share/agitr/: package.xml
install/share/agitr/cmake/: agitrConfig.cmake
install/share/urdf_info/: package.xml
install/share/urdf_info/cmake/: urdf_infoConfig.cmake
src/: CMakeLists.txt.user.f9573dc
src/agitr/: CMakeLists.txt
src/urdf_info/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/urdf_info/cmake/: SearchForTinyXML.cmake
src/urdf_info/scripts/: broadcast.py
src/urdf_info/src/: categorize.cpp  full_info.cpp  getTransform.cpp  hello.cpp  import_tree.cpp  pointcloud.cpp  random_poses.cpp  random_poses.cpp~
urdf/: example.xml
urdf/Humanoid/: biped_robin.urdf  nao.txt  r2.txt  romeo.txt  tulip.txt
urdf/Humanoid/tulip/: tulip.xarco  tulip_controller.xarco
urdf/Humanoid/txt/: baxter.txt  biped_robin.txt  pepper.txt  reemc.txt  velrobot.txt
urdf/Humanoid/urdf/: NaoH25V40.gv  baxter.urdf  joints.txt  reemc.urdf  tulip.urdf
urdf/Manipulators/: lwa.urdf  lwa4p_extended.urdf  wam4.urdf
urdf/Manipulators/errors/: lwa4d.urdf  lwa4p.urdf  lwa_extended.urdf  sdh.urdf
urdf/Manipulators/txt/: ABB_irb2400.txt  ABB_irb5400.txt  ABB_irb6600.txt  Allegro_hand_left.txt  Allegro_hand_right.txt  Clam.txt  fanuc_lrmate200ic.txt  fanuc_lrmate200ic5f.txt  fanuc_lrmate200ic5hs.txt  fanuc_lrmate200ic5l.txt  fanuc_m10ia.txt  fanuc_m16ib20.txt  fanuc_m20ia.txt  fanuc_m20ia10l.txt  list.txt  m430ia2f.txt  m430ia2p.txt  motorman_mh5.txt  motorman_sia10f.txt  motorman_sia20d.txt  motorman_sia5d.txt  shadowhand_lite.txt  ur10.txt  ur5.txt  wam4.txt  wam7.txt  wsg50.txt
urdf/Manipulators/urdf/: shadowhand_lite.urdf  wam7.urdf
urdf/Mobile/: Guardian.urdf  Komodo.urdf  Minilab.urdf  WashU.urdf  armadillo.urdf  roomba_robin_kinect.urdf
urdf/Mobile/txt/: Corobot.txt  EvaRobot.txt  Guardian.txt  Komodo.txt  Pioneer-lx-devil.txt  Pioneer2dx.txt  Pioneer3at.txt  Pioneer3dx.txt  Pioneerlx.txt  Robotino.txt  Scitos_haw_schunk.txt  WashU.txt  avgs.txt  b21r.txt  crab.txt  freight.txt  lizi.txt  maibot.txt  mpo-500.txt  mpo-700.txt  powerbot.txt  qbo.txt  roomba_robin_kinect.txt  stingbot.txt  summit_xl.txt  traxbot.txt  wheeled_robin_kinect.txt
urdf/Mobile/urdf/: Corobot.urdf  eddiebot.urdf  husky.urdf  qbo.urdf  summit_xl.urdf  wheeled_robin_kinect.urdf
urdf/MobileManipulators/: pr2.txt  pr2.urdf  rosie.urdf
urdf/MobileManipulators/txt/: Hekateros-4DOF.txt  Hekateros-5DOF.txt  darpa.txt  fetch.txt  reem.txt  rosie.txt
urdf/MobileManipulators/urdf/: amigo.urdf  darpa.urdf  reem.urdf
urdf/UAV/: firefly.urdf  iris.urdf
urdf/UAV/txt/: ardrone.txt  firefly.txt  hector.txt  iris.txt  quadrotor.txt
urdf/UAV/urdf/: ardrone.urdf  hector.urdf
