<?xml version="1.0"?>
<package>
  <name>urdf_info</name>
  <version>0.0.1</version>
  <description>The urdf_info package</description>
  <maintainer email="mamort@deakin.edu.au">Michael Mortimer</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>kdl_parser</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>


  <run_depend>geometry_msgs</run_depend>
  <run_depend>turlesim</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>urdf</run_depend>
 
</package>
